@@ -173,7 +173,7 @@
 
 <addon
   id="plugin.video.videodevil"
-  version="1.7.1"
+  version="1.7.2"
   name="VideoDevil"
   provider-name="sfaxman / bootsy">
   <requires>
